refactoring front end code + styiling of modals

--- a/movieApp/static/movieApp/css/app.css
+++ b/movieApp/static/movieApp/css/app.css
@@ -22,9 +22,34 @@ body::before {
     z-index: 9999;
 }
 
-/* global styles */
+
+/* global classes */
+.show {
+    display: block !important;
+}
+
+.hide {
+    display: none;
+}
+
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+} 
+
+.modal-dialog {
+    max-width: 50%;
+}
+
+/* body background color */
+.main {
+    background: #202020;
+    /* fallback for old browsers */
+	/*     background-image: url('./clock-pattern.png'); */
+}
 
 
+/* navigation bar Bootstrap */
 .navbar {
     background: #1E1E1E;
     padding: 3.5% 6%;
@@ -38,7 +63,7 @@ body::before {
     font-family: 'Anton', sans-serif;
 }
 
-
+/* navigation bar custom */
 .nav-item-form {
     margin: 0 10% 0 15%;
 }
@@ -47,94 +72,18 @@ body::before {
     padding: .5rem 1.15rem;
 }
 
-.header-container {
-    padding: 7% 15%;
-    background: #1E1E1E;
-    color: #fff;
-}
-
-
-
-
-
-.show {
-    display: block !important;
-}
-
-.hide {
-    display: none;
-}
-
-.js-modal {
-    z-index: 9999;
-}
-
-.container {
-    max-width: 1140px;
-    margin: 0 auto;
-}
-
-.nav {
-    margin-top: 0.5rem;
-    background: #202020;
-    height: 4.375rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav__menu {
-    align-items: center;
-    display: flex;
-}
-
-.nav__item {
-    text-decoration: none;
-    color: #eee;
-    font-family: Anton, sans-serif;
-}
-
-
-.search-form {
-    padding: 5rem;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-.search-form__query {
-    width: 20rem;
-    font-size: 1.4rem;
-    padding: 1rem 1.2rem;
-    font-family: 'Open Sans', sans-serif;
-	caret-color: #FCAB07;
-}
-
-.search-form__query:focus {
-    outline: none;
-}
-
-.search-form__icon {
-    background-color: #FCAB07;
-    font-size: 2rem;
-    padding: 1rem;
-}
-
-.search-form__icon > .fa-search {
-    color: white;
-}
-
-.main {
-    background: #202020;
-    /* fallback for old browsers */
-	/*     background-image: url('./clock-pattern.png'); */
-}
-
+/* section movies */
 .result {
     background-image: linear-gradient(#1E1E1E 0%, #000 100%);
     height: auto;
 }
 
+.modal-title {
+    font-family: 'Baskervville', serif;    
+    color: black;
+}
+
+/* movie items */
 .movies {
     padding: 3rem 0;
     border-radius: 4px;
@@ -143,24 +92,38 @@ body::before {
     min-height: 100vh;
 }
 
-.movies__item {
+.movie-item, .movie-item-modal {
     width: 33.33333%;
     border-radius: 4px;
     position: relative;
 }
 
+.movie-item-modal.full-width {
+    width: 100%;
+}
+ 
+.movie-name-modal {
+    font-family: 'Baskervville', serif;    
+    padding-top: 0.8rem;
+}
+
 .movie-name {
-    border-right: 1px solid #eee;
-    border-left: 1px solid #eee;
+    border-right: 1px solid rgb(216, 211, 211);
+    border-left: 1px solid rgb(216, 211, 211);
     color: black;
 	background: white;
     text-align: center;
     padding: 1rem;
     font-family: 'Baskervville', serif;    
     margin-top: -3px;
+    font-size: 1.2rem;
 }
 
-.movies__item-image {
+.movie-name p {
+    margin: 0;
+}
+
+.movie-image {
     transition: all 0.2s ease;
 	width: 100%;
     height: 45vw;
@@ -168,7 +131,7 @@ body::before {
     box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
 }
 
-.movies__item-star {
+.movie-star {
     z-index: 9998;
     color: #FAAA2B;
     top: 20%;
@@ -178,7 +141,7 @@ body::before {
     transform: translateX(-50%);
 }
 
-.movies__item-delete-button {
+.movie-delete-button {
     z-index: 9998;
     padding: 0 0.2rem;
     background: #333;
@@ -190,17 +153,17 @@ body::before {
     right: 1rem;
 }
 
-.movies__item-delete-button:hover {
+.movie-delete-button:hover {
 	cursor: pointer;
     transform: scale(1.3);
 }
 
-.movies__item-delete {
+.movie-delete {
     font-size: 1.4rem;
     color: #EA535D;
 }
 
-.movies__item-rating {
+.movie-rating {
     z-index: 9998;
     font-size: 5rem;
     font-family: Anton, sans-serif;
@@ -211,7 +174,7 @@ body::before {
     color: white;
 }
 
-.movies__item-expander {
+.movie-expander {
     font-weight: bold;
     font-size: 1.4rem;
 	text-decoration: none;
@@ -227,28 +190,13 @@ body::before {
     font-family: 'Open Sans', sans-serif;
 }
 
-.movies__item-expander:hover {
+.movie-expander:hover {
 	background: #FCAB07;
     cursor: pointer;
 }
 
-.footer {
-    background-color: #282A3A !important;
-    padding: 1rem 0;
-}
-
-.footer__text {
-    color: #FCA10D !important;
-    text-align: center;
-    font-size: 0.8rem;
-    font-family: 'Open sans', sans-serif;
-}
-
+/* media queries */
 @media only screen and (max-width: 1224px) {
-    html {
-        font-size: 16px;
-    }
-
     .container {
         padding-left: 1rem;
         padding-right: 1rem;
@@ -263,26 +211,36 @@ body::before {
     .nav-item-form {
         margin: 0 5% 0 3%;
     }
+    .movie-expander {
+        padding: .5rem .7rem;
+        font-size: 1rem;
+    }
+    .movie-rating {
+        font-size: 4rem;
+        top: 34%;
+    }
 }
 
 @media only screen and (max-width: 768px) {
     html {
         font-size: 14px;
     }
-
-    .movies__item {
+    .movie-item {
         width: 50%;
     }
 
-    .movies__item-image {
+    .movie-image {
         height: 60vw;
     }
     .navbar-brand {
         font-size: 2em;
     }
+    .modal-dialog {
+        max-width: 65%;
+    }
 }
 
-
+/* there was a gap of 15px making problems with nav bar */
 @media only screen and (max-width: 590px) {
     .nav-item-input {
         width: 70% !important;
@@ -297,23 +255,23 @@ body::before {
         width: 86%;
         margin-left: 1.3rem;
     }
-}
+    .modal-dialog {
+        max-width: 100%;
+    }
 
 @media only screen and (max-width: 480px) {
     html {
         font-size: 12px;
     }
 
-    .movies__item-image {
+    .movie-image {
         height: 100vw;
     }
 
-    .movies__item {
+    .movie-item {
         width: 100%;
     }
 }
 
-.movies__item.full-width {
-    width: 100%;
-}
+
 
