--- a/movieApp/templates/movieApp/create-modal.html
+++ b/movieApp/templates/movieApp/create-modal.html
@@ -1,14 +1,17 @@
 <div class="modal fade" id="modal-create">
     <div class="modal-dialog">
         <div class="modal-content">
+
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Create</h5>
+                <h5 class="modal-title">Create</h5>
                 <button type="button" class="close" data-dismiss="modal">
                     <span>&times;</span>
                 </button>
             </div>
+
             <div class="modal-body">
                 <form action="{% url 'movie_create' %}" method="post">
+                    
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="movieName">Name</label>
@@ -35,6 +38,7 @@
 
                 </form>
             </div>
+
         </div>
     </div>
 </div>
