--- a/movieApp/templates/movieApp/detail-modal.html
+++ b/movieApp/templates/movieApp/detail-modal.html
@@ -1,20 +1,23 @@
 <div class="modal fade" id="modal-{{movie.id}}">
     <div class="modal-dialog">
         <div class="modal-content">
+
             <div class="modal-header">
                 <h5 class="modal-title" id="modalName">{{movie.fields.Name}}</h5>
                 <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
             </div>
+
             <div class="modal-body">
-                <div class="movies__item full-width">
-                    <i class="movies__item-star fa fa-star hide"></i>
-                    <p class="movies__item-rating hide">{{movie.fields.Rating}}/10</p>
-                    <img class="movies__item-image" src="{{ movie.fields.Pictures.0.url }}" />
-                    <div class="movies__item-title">
+                <div class="movie-item-modal full-width">
+                    <i class="movie-item-star fa fa-star hide"></i>
+                    <p class="movie-rating hide">{{ movie.fields.Rating }}/10</p>
+                    <img class="movie-image" src="{{ movie.fields.Pictures.0.url }}" />
+                    <div class="movie-name-modal">
                         <p>{{ movie.fields.Notes }}</p>
                     </div>
                 </div>
             </div>
+
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-toggle="modal"
                     data-target="#edit-modal-{{movie.id}}">Edit</button>
