--- a/movieApp/templates/movieApp/index.html
+++ b/movieApp/templates/movieApp/index.html
@@ -41,7 +41,7 @@
     </nav>
     
    <!-- section with movies -->
-    <section class="result">
+    <section class="movie-container"> 
         <div class="container">
 
             <!-- Show notifications (if any) -->
@@ -76,6 +76,19 @@
         </div>
     </section>
     
+
+    <footer>
+        <div class="footer-container">
+            <h2>Action Hub</h2>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fas fa-envelope"></i>
+    
+            <p>Copyright Action Hub © 2019. All rights reserved.</p>
+        </div>
+    </footer>
 
     {% include "movieApp/create-modal.html" %}
     
