--- a/movieApp/templates/movieApp/edit-modal.html
+++ b/movieApp/templates/movieApp/edit-modal.html
@@ -1,4 +1,3 @@
-
 <div class="modal fade" id="edit-modal-{{movie.id}}">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -29,7 +28,8 @@
 
                     <div class="form-group">
                         <label for="editNotes">Notes</label>
-                        <textarea class="form-control" id="movieNotes" rows="5" placeholder="Add notes" name="Notes">{{ movie.fields.Notes }}</textarea>
+                        <textarea class="form-control" id="movieNotes" rows="5" placeholder="Add notes"
+                            name="Notes">{{ movie.fields.Notes }}</textarea>
                     </div>
 
                     <button type="submit" class="btn btn-primary">Update</button>
@@ -39,5 +39,3 @@
         </div>
     </div>
 </div>
-
-
